crates/jsonschema-macros/tests/ui/invalid_unique_items_type.stderr
error: 42 is not of type "boolean"
 --> tests/ui/invalid_unique_items_type.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"uniqueItems":42}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
