crates/jsonschema-macros/tests/ui/invalid_unique_items_type.rs
#[jsonschema::validator(schema = r#"{"uniqueItems":42}"#)]
struct InvalidUniqueItemsTypeValidator;

fn main() {}
